// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`time period stats > processJob > processes a daily and weekly job 1`] = `
[
  [
    [
      {
        "data": [
          {
            "data": {
              "endOfPeriod": 1730073599999,
              "sendWeeklySummary": true,
            },
            "name": "timePeriodStats",
            "opts": {
              "deduplication": {
                "id": "timePeriodStats-1730073599999",
              },
              "delay": 41103999,
            },
          },
        ],
        "name": "scheduler",
      },
      {
        "data": {
          "message": "📊 On <strong>2024-10-27</strong>, we had a volume of <strong>$4,000.00</strong> with <strong>$3,000.00</strong> of network fees and <strong>$2,000.00</strong> in LP fees. Also, we burned <strong>1000.00</strong> FLIP tokens.",
          "messageData": {
            "name": "DAILY_SUMMARY",
          },
          "platform": "telegram",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "message": "📊 On **2024-10-27**, we had a volume of **$4,000.00** with **$3,000.00** of network fees and **$2,000.00** in LP fees. Also, we burned **1000.00** FLIP tokens.",
          "messageData": {
            "name": "DAILY_SUMMARY",
          },
          "platform": "discord",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "message": "💼 Top LPs for 2024-10-27 are in 
<strong>🥇 $1,000.00</strong> cf12…7890 (50.00%)
<strong>🥈 $1,000.00</strong> cf09…4321 (50.00%)
",
          "messageData": {
            "name": "DAILY_SUMMARY",
          },
          "platform": "telegram",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "message": "💼 Top LPs for 2024-10-27 are in 
**🥇 $1,000.00** cf12…7890 (50.00%)
**🥈 $1,000.00** cf09…4321 (50.00%)
",
          "messageData": {
            "name": "DAILY_SUMMARY",
          },
          "platform": "discord",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "message": "📊 For the week ending <strong>2024-10-27</strong>, we had a volume of <strong>$28,000.00</strong> with <strong>$21,000.00</strong> of network fees and <strong>$14,000.00</strong> in LP fees. Also, we burned <strong>7000.00</strong> FLIP tokens.",
          "messageData": {
            "name": "WEEKLY_SUMMARY",
          },
          "platform": "telegram",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "message": "📊 For the week ending **2024-10-27**, we had a volume of **$28,000.00** with **$21,000.00** of network fees and **$14,000.00** in LP fees. Also, we burned **7000.00** FLIP tokens.",
          "messageData": {
            "name": "WEEKLY_SUMMARY",
          },
          "platform": "discord",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "message": "💼 Top LPs for the week are in <strong>🥇 $2,000.00</strong> cf12…7890 (49.00%)
<strong>🥈 $2,000.00</strong> cf09…4321 (49.00%)
",
          "messageData": {
            "name": "WEEKLY_SUMMARY",
          },
          "platform": "telegram",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "message": "💼 Top LPs for the week are in **🥇 $2,000.00** cf12…7890 (49.00%)
**🥈 $2,000.00** cf09…4321 (49.00%)
",
          "messageData": {
            "name": "WEEKLY_SUMMARY",
          },
          "platform": "discord",
        },
        "name": "messageRouter",
      },
    ],
  ],
]
`;

exports[`time period stats > processJob > processes a daily job 1`] = `
[
  [
    [
      {
        "data": [
          {
            "data": {
              "endOfPeriod": 1729900799999,
              "sendWeeklySummary": false,
            },
            "name": "timePeriodStats",
            "opts": {
              "deduplication": {
                "id": "timePeriodStats-1729900799999",
              },
              "delay": 41103999,
            },
          },
        ],
        "name": "scheduler",
      },
      {
        "data": {
          "message": "📊 On <strong>2024-10-25</strong>, we had a volume of <strong>$4,000.00</strong> with <strong>$3,000.00</strong> of network fees and <strong>$2,000.00</strong> in LP fees. Also, we burned <strong>1000.00</strong> FLIP tokens.",
          "messageData": {
            "name": "DAILY_SUMMARY",
          },
          "platform": "telegram",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "message": "📊 On **2024-10-25**, we had a volume of **$4,000.00** with **$3,000.00** of network fees and **$2,000.00** in LP fees. Also, we burned **1000.00** FLIP tokens.",
          "messageData": {
            "name": "DAILY_SUMMARY",
          },
          "platform": "discord",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "message": "💼 Top LPs for 2024-10-25 are in 
<strong>🥇 $1,000.00</strong> cf12…7890 (50.00%)
<strong>🥈 $1,000.00</strong> cf09…4321 (50.00%)
",
          "messageData": {
            "name": "DAILY_SUMMARY",
          },
          "platform": "telegram",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "message": "💼 Top LPs for 2024-10-25 are in 
**🥇 $1,000.00** cf12…7890 (50.00%)
**🥈 $1,000.00** cf09…4321 (50.00%)
",
          "messageData": {
            "name": "DAILY_SUMMARY",
          },
          "platform": "discord",
        },
        "name": "messageRouter",
      },
    ],
  ],
]
`;

exports[`time period stats > processJob > processes a daily job without a flip burn 1`] = `
[
  [
    [
      {
        "data": [
          {
            "data": {
              "endOfPeriod": 1729900799999,
              "sendWeeklySummary": false,
            },
            "name": "timePeriodStats",
            "opts": {
              "deduplication": {
                "id": "timePeriodStats-1729900799999",
              },
              "delay": 41103999,
            },
          },
        ],
        "name": "scheduler",
      },
      {
        "data": {
          "message": "📊 On <strong>2024-10-25</strong>, we had a volume of <strong>$4,000.00</strong> with <strong>$3,000.00</strong> of network fees and <strong>$2,000.00</strong> in LP fees.",
          "messageData": {
            "name": "DAILY_SUMMARY",
          },
          "platform": "telegram",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "message": "📊 On **2024-10-25**, we had a volume of **$4,000.00** with **$3,000.00** of network fees and **$2,000.00** in LP fees.",
          "messageData": {
            "name": "DAILY_SUMMARY",
          },
          "platform": "discord",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "message": "",
          "messageData": {
            "name": "DAILY_SUMMARY",
          },
          "platform": "telegram",
        },
        "name": "messageRouter",
      },
      {
        "data": {
          "message": "",
          "messageData": {
            "name": "DAILY_SUMMARY",
          },
          "platform": "discord",
        },
        "name": "messageRouter",
      },
    ],
  ],
]
`;
